--- a/Install/FreeBSD/Vagrantfile
+++ b/Install/FreeBSD/Vagrantfile
@@ -4,18 +4,18 @@ Vagrant.configure("2") do |config|
     config.ssh.insert_key = false
 
     config.vm.provider "virtualbox" do |vbox|
-        vbox.allowlist_verified = true
         vbox.memory = 1024
         vbox.cpus = 1
     end
 
-    config.vm.define "bastion" do |bastion|
-        bastion.vm.box = IMAGE_NAME
+    config.vm.define "fbsd14" do |fbsd|
+        fbsd.vm.box = IMAGE_NAME
+        fbsd.vm.network "forwarded_port", guest: 22, host: 2203, host_ip: "127.0.0.1"
+	fbsd.vm.network "private_network", ip: "192.168.24.3"
+        fbsd.vm.hostname = "fbsd14"
 	config.vm.box_version = "2024.05.31"
 	config.disksize.size = '20GB'
-        bastion.vm.network "forwarded_port", guest: 22, host: 2203, host_ip: "127.0.0.1"
-	bastion.vm.network "private_network", ip: "192.168.24.3"
-        bastion.vm.hostname = "fbsd14"
+
     end
 
     config.vm.provision "shell", inline: <<-SHELL
