--- a/Install/Ubuntu/Vagrantfile
+++ b/Install/Ubuntu/Vagrantfile
@@ -13,4 +13,10 @@ Vagrant.configure("2") do |config|
         ubuntu.vm.network "forwarded_port", guest: 22, host: 2202, host_ip: "127.0.0.1"
         ubuntu.vm.hostname = "ubuntu"
     end
+
+    config.vm.provision "file", source: "id_rsa.pub", destination: "~/.ssh/me.pub"
+    config.vm.provision "shell", inline: <<-SHELL
+    cat /home/vagrant/.ssh/me.pub >> /home/vagrant/.ssh/authorized_keys
+
+    SHELL
 end
