--- a/Install/FreeBSD/Vagrantfile
+++ b/Install/FreeBSD/Vagrantfile
@@ -13,4 +13,10 @@ Vagrant.configure("2") do |config|
 	config.vm.box_version = "2024.05.31"
 	config.disksize.size = '20GB'
     end
+
+    config.vm.provision "file", source: "id_rsa.pub", destination: "~/.ssh/me.pub"
+    config.vm.provision "shell", inline: <<-SHELL
+    cat /home/vagrant/.ssh/me.pub >> /home/vagrant/.ssh/authorized_keys
+
+    SHELL
 end
