--- a/Install/Ubuntu/Apache/ZabbixAgent2/Vagrantfile
+++ b/Install/Ubuntu/Apache/ZabbixAgent2/Vagrantfile
@@ -11,7 +11,6 @@ Vagrant.configure("2") do |config|
     config.vm.define "ubuntu" do |ubuntu|
         ubuntu.vm.box = IMAGE_NAME
         ubuntu.vm.network "forwarded_port", guest: 22, host: 2202, host_ip: "127.0.0.1"
-	    ubuntu.vm.network "forwarded_port", guest: 80, host: 8002, host_ip: "127.0.0.1"
         ubuntu.vm.hostname = "ubuntu"
     end
 
@@ -21,7 +20,10 @@ Vagrant.configure("2") do |config|
 
     SHELL
 
-    # Načtení a provedení scriptu install-apache.sh
-    config.vm.provision "shell", path: "install-apache.sh"
+    # Načtení a provedení scriptu install-zabbix-agent2.sh
+    config.vm.provision "shell", path: "install-zabbix-agent2.sh"
 
+    # Načtení a provedení scriptu configure-zabbix-agent2.sh
+    config.vm.provision "shell", path: "configure-zabbix-agent2.sh"
+    
 end
