--- a/Install/FreeBSD/Apache/Vagrantfile
+++ b/Install/FreeBSD/Apache/Vagrantfile
@@ -9,6 +9,7 @@ Vagrant.configure("2") do |config|
     config.vm.define "fbsd14" do |fbsd|
         fbsd.vm.box = IMAGE_NAME
         fbsd.vm.network "forwarded_port", guest: 22, host: 2201, host_ip: "127.0.0.1"
+        fbsd.vm.network "forwarded_port", guest: 80, host: 8001, host_ip: "127.0.0.1"
         fbsd.vm.hostname = "fbsd14"
 	config.disksize.size = '20GB'
     end
@@ -16,6 +17,11 @@ Vagrant.configure("2") do |config|
     config.vm.provision "file", source: "id_rsa.pub", destination: "~/.ssh/me.pub"
     config.vm.provision "shell", inline: <<-SHELL
     cat /home/vagrant/.ssh/me.pub >> /home/vagrant/.ssh/authorized_keys
+    sudo pkg install -y bash
 
     SHELL
+
+    # Načtení a provedení scriptu install-apache.sh
+    config.vm.provision "shell", path: "install-apache.sh"
+
 end
