--- a/Install/FreeBSD/MariaDB/Vagrantfile
+++ b/Install/FreeBSD/MariaDB/Vagrantfile
@@ -16,6 +16,11 @@ Vagrant.configure("2") do |config|
     config.vm.provision "file", source: "id_rsa.pub", destination: "~/.ssh/me.pub"
     config.vm.provision "shell", inline: <<-SHELL
     cat /home/vagrant/.ssh/me.pub >> /home/vagrant/.ssh/authorized_keys
+    sudo pkg install -y bash
 
     SHELL
+
+    # Načtení a provedení scriptu install-apache.sh
+    config.vm.provision "shell", path: "install-mariadb.sh"
+
 end
