--- a/Install/FreeBSD/ZabbixAgent/Vagrantfile
+++ b/Install/FreeBSD/ZabbixAgent/Vagrantfile
@@ -16,6 +16,14 @@ Vagrant.configure("2") do |config|
     config.vm.provision "file", source: "id_rsa.pub", destination: "~/.ssh/me.pub"
     config.vm.provision "shell", inline: <<-SHELL
     cat /home/vagrant/.ssh/me.pub >> /home/vagrant/.ssh/authorized_keys
+    sudo pkg install -y bash
 
     SHELL
+
+    # Načtení a provedení scriptu install-zabbix-agent.sh
+    config.vm.provision "shell", path: "install-zabbix-agent.sh"
+
+    # Načtení a provedení scriptu configure-zabbix-agent.sh
+    config.vm.provision "shell", path: "configure-zabbix-agent.sh"
+
 end
